-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: N/A
-
Fix Version/s: 10.1.21
-
Component/s: Backup
-
Labels:None
Buildbot occasionally shows assert at end of prepare of partial backup:
http://buildbot.askmonty.org/buildbot/builders/kvm-bintar-centos5-amd64/builds/4190/steps/test/logs/stdio
xtrabackup.xb_page_compress w4 [ fail ]
...
InnoDB: Starting shutdown...
2016-12-08 14:46:11 48a75940 InnoDB: Assertion failure in thread 1218926912 in file buf0flu.cc line 2431
InnoDB: Failing assertion: srv_max_dirty_pages_pct_lwm <= srv_max_buf_pool_modified_pct
InnoDB: We intentionally generate a memory trap.
No reliable testcase yet, needs additional investigation