MDEV-11507 : Sporadic assert during prepare srv_max_dirty_pages_pct_lwm <= srv_max_buf_pool_modified_pct

srv_max_buf_pool_modified_pct has datatype double, do not handle it as
ulong in xtrabackup options.